pod/main/static/css/pod-admin.css
@media (prefers-color-scheme: dark) {
  .select2-container--default .select2-selection--multiple,
  .select2-dropdown,
  .select2-container--default
    .select2-selection--multiple
    .select2-selection__choice {
    background-color: #121212 !important;
  }

  .select2-container--default.select2-container--focus
    .select2-selection--multiple {
    border: solid white 1px !important;
  }

  .select2-search__field {
    color: white !important;
  }

  :root {
    --pod-font-color: white;
  }
}

/** Set the Django-admin auto dark mode
 *  when dark theme is active in Pod.
 **/
:root[data-theme="dark"] {
  --primary: #264b5d;
  --primary-fg: #eee;
  --accent: #f5dd5d;
  --body-fg: #eee;
  --body-bg: #121212;
  --body-quiet-color: #e0e0e0;
  --body-loud-color: #fff;
  --breadcrumbs-link-fg: #e0e0e0;
  --breadcrumbs-bg: var(--primary);
  --link-fg: #81d4fa;
  --link-hover-color: #4ac1f7;
  --link-selected-fg: #6f94c6;
  --hairline-color: #272727;
  --border-color: #353535;
  --error-fg: #e35f5f;
  --message-success-bg: #006b1b;
  --message-warning-bg: #583305;
  --message-error-bg: #570808;
  --darkened-bg: #212121;
  --selected-bg: #1b1b1b;
  --selected-row: #00363a;
  --close-button-bg: #333;
  --close-button-hover-bg: #666;
}

:root[data-theme="light"] {
  --primary: var(--pod-primary);
  --body-bg: #fff;
  --button-fg: #fff;
  --body-quiet-color: #666;
}

.calendar table {
  background-color: var(--body-bg);
}

#user-tools a:focus,
#user-tools a:hover {
  color: #000;
}

.deletelink,
.cancel-link {
  box-sizing: revert;
}

/* prevent bootstrap 5 from collapsing Django admin fieldset */
fieldset.collapse:not(.show) {
  display: block;
}

/* Corrections on Django admin base.css */
select {
  height: auto;
}

